[project]
name = "comfyui-nodes-docs"
description = "This is a plugin for displaying documentation for each comfyui node. "
version = "1.1.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/CavinHuang/comfyui-nodes-docs"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "cavinhuang"
DisplayName = "comfyui-nodes-docs"
Icon = ""
